--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="manifest" href="manifest.json" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
@@ -14,6 +15,7 @@
     href="https://cdn.jsdelivr.net/npm/beercss@3.2.10/dist/cdn/beer.min.css"
     rel="stylesheet"
   />
+  <script src="sw.js"></script>
   <script
     type="module"
     src="https://cdn.jsdelivr.net/npm/beercss@3.2.10/dist/cdn/beer.min.js"
