--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <link rel="manifest" href="manifest.json" />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
@@ -24,4 +25,15 @@
     type="module"
     src="https://cdn.jsdelivr.net/npm/material-dynamic-colors@0.1.7/dist/cdn/material-dynamic-colors.min.js"
   ></script>
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", (user) => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
 </html>
