--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="dns-prefetch" href="https://unpkg.com" />
     <title>Sveltia CMS</title>
+    <style>
+      div.sui.group.primary-sidebar,
+      button.sui.button.medium.ghost.iconic.svelte-193pylq {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <!-- Include the script that builds the page and powers Sveltia CMS -->
