just a sveltia fixutres

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,8 +6,7 @@
     <link rel="dns-prefetch" href="https://unpkg.com" />
     <title>Sveltia CMS</title>
     <style>
-      div.sui.group.primary-sidebar,
-      button.sui.button.medium.ghost.iconic.svelte-193pylq {
+      div.sui.group.primary-sidebar {
         display: none;
       }
     </style>
