--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="manifest" href="manifest.json" />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <meta
+      name="viewport"
+      content="initial-scale=1, viewport-fit=cover, user-scalable=no"
+    />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
