ill try this out

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
+    <!-- Reference the manifest.webmanifest file -->
+    <link rel="manifest" href="manifest.webmanifest" />
+
+    <!-- Reference the manifest.json file -->
     <link rel="manifest" href="manifest.json" />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <meta
