--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="dns-prefetch" href="https://unpkg.com" />
-    <title>Sveltia CMS</title>
+    <title>Moske | ADMIN</title>
     <style>
       div.sui.group.primary-sidebar {
         display: none;
