--- a/src/app.html
+++ b/src/app.html
@@ -44,4 +44,19 @@
       });
     }
   </script>
+
+  <!--Google Analytics-->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-PHS2WCLH21"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-PHS2WCLH21");
+  </script>
 </html>
