--- a/src/app.html
+++ b/src/app.html
@@ -43,6 +43,21 @@
         }
       });
     }
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker
+        .register("/sw.js")
+        .then(function (registration) {
+          // Registration was successful
+          console.log(
+            "Service Worker registered with scope:",
+            registration.scope
+          );
+        })
+        .catch(function (error) {
+          // Registration failed
+          console.error("Service Worker registration failed:", error);
+        });
+    }
   </script>
 
   <!--Google Analytics-->
