--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,12 @@
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
-
+  <style>
+    html,
+    body {
+      overscroll-behavior-y: none;
+    }
+  </style>
   <link
     href="https://cdn.jsdelivr.net/npm/beercss@3.2.10/dist/cdn/beer.min.css"
     rel="stylesheet"
