so position fixed aint good

--- a/src/app.html
+++ b/src/app.html
@@ -23,6 +23,10 @@
     html,
     body {
       overscroll-behavior-y: none;
+      overflow: hidden;
+      @media (max-width: 991px) {
+        webkit-touch-callout: none;
+      }
     }
   </style>
   <link
