--- a/src/app.html
+++ b/src/app.html
@@ -23,7 +23,7 @@
     html,
     body {
       overscroll-behavior-y: none;
-      overflow: hidden;
+      overflow: scroll;
       @media (max-width: 991px) {
         webkit-touch-callout: none;
       }
