--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
-    <!-- Reference the manifest.webmanifest file -->
-    <link rel="manifest" href="manifest.webmanifest" />
-
-    <!-- Reference the manifest.json file -->
-    <link rel="manifest" href="manifest.json" />
+    <!-- Reference the manifest file -->
+    <link rel="manifest" href="%sveltekit.assets%/manifest.webmanifest" />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <meta
       name="viewport"
@@ -33,7 +30,6 @@
     href="https://cdn.jsdelivr.net/npm/beercss@3.2.10/dist/cdn/beer.min.css"
     rel="stylesheet"
   />
-  <script src="sw.js"></script>
   <script
     type="module"
     src="https://cdn.jsdelivr.net/npm/beercss@3.2.10/dist/cdn/beer.min.js"
